commited because sher has chaged something

--- a/index.html
+++ b/index.html
@@ -206,11 +206,7 @@
                 <!-- About Thumb -->
                 <div class="col-12 col-md-6" >
                     <div data-wow-delay="300ms">
-<<<<<<< HEAD
-                        <img src="img/bg-img/2.png" height="420" width="420" alt="">
-=======
                         <img src="img/bg-img/2.jpg" height="450" width="450" alt="">
->>>>>>> dfe3be136d575f3eb017b4cefba10f6ce04fe141
                     </div>
                 </div>
 
@@ -218,13 +214,8 @@
                 <div class="col-12 col-md-6">
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About The Speaker</h6>
-<<<<<<< HEAD
-                        <h3 class="wow fadeInUp"style="color:#35547b;" data-wow-delay="300ms">Hi, I'm Kartik</h3>
-                        <p class="wow fadeInUp" style="color:#35547b;" data-wow-delay="300ms">I am an AR/VR Evangelist  and have been working with immersive technologies for the last 3 years. I am an engineer by profession, explorer in mind and an art lover at heart. I am founder of ARVidhya, an Augmented Reality EdTech startup working for making children's education more engaging and fun. I am Winner at Startup Weekend organized by Google for Entrepreneurs held at Microsoft Hyderabad. I'm proud winner of International IEEE Maker Fair competing with participants across 18 countries. I recently attended the world's largest AR VR Hackathon held at Massachusetts Institute of Technology, USA. <br/><br />I will be guiding you to learn and understand immersive technologies in detail. We will walk through the development workflow by building different AR apps during the session. I am excited to see you all at the event. </p>
-=======
                         <h3 class="wow fadeInUp"style="color:#35547b;" data-wow-delay="300ms">Hi I'm Kartik</h3>
                         <p class="wow fadeInUp" style="color:#35547b;" data-wow-delay="300ms">I am an AR/VR Evangelist  and have been working with immersive technologies for the last 3 years. I am engineer by profession, explorer in mind and an art lover at heart. I am founder of ARVidhya, an Augmented Reality EdTech startup working for making children's education more engaging and fun. I am Winner at Startup Weekend organized by Google for Entrepreneurs held at Microsoft Hyderabad. I recently attended the world's largest AR VR Hackathon held at Massachusetts Institute of Technology, USA. I will be guiding you to learn and understand immersive technologies in detail. We will walk through the development workflow by building different AR apps during the session. I am excited to see you all at the event. </p>
->>>>>>> dfe3be136d575f3eb017b4cefba10f6ce04fe141
 
                     </div>
                 </div>
@@ -590,6 +581,74 @@
                     </div>
                 </div>
 
+                <!-- Single Speaker Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <!-- Thumb -->
+                        <div class="speaker-single-thumb">
+                            <img src="img/bg-img/4.jpg" alt="">
+                        </div>
+                        <!-- Social Info -->
+                        <div class="social-info">
+                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <!-- Info -->
+                        <div class="speaker-info">
+                            <h5>Albert Barnes</h5>
+                            <p>Founder</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Single Speaker Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <!-- Thumb -->
+                        <div class="speaker-single-thumb">
+                            <img src="img/bg-img/4.jpg" alt="">
+                        </div>
+                        <!-- Social Info -->
+                        <div class="social-info">
+                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <!-- Info -->
+                        <div class="speaker-info">
+                            <h5>Albert Barnes</h5>
+                            <p>Founder</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Speaker Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <!-- Thumb -->
+                        <div class="speaker-single-thumb">
+                            <img src="img/bg-img/4.jpg" alt="">
+                        </div>
+                        <!-- Social Info -->
+                        <div class="social-info">
+                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <!-- Info -->
+                        <div class="speaker-info">
+                            <h5>Albert Barnes</h5>
+                            <p>Founder</p>
+                        </div>
+                    </div>
+                </div>
+
+                
                 <!-- Single Speaker Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
