changed our team section with profile pic

--- a/index.html
+++ b/index.html
@@ -587,12 +587,12 @@
             </div>
 
             <div class="row">
-                <!-- Single Speaker Area -->
+                <!-- ADITYA SHER -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/4.jpg" alt="">
+                            <img src="img/our-team/aditya.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -603,18 +603,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Albert Barnes</h5>
-                            <p>Founder</p>
+                            <h5>ADITYA SHER</h5>
+                            <!-- <p>Founder</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- SOURAV SINGH -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/4.jpg" alt="">
+                            <img src="img/our-team/sourav.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -625,19 +625,19 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Albert Barnes</h5>
-                            <p>Founder</p>
+                            <h5>SOURAV SINGH</h5>
+                            <!-- <p>Founder</p> -->
                         </div>
                     </div>
                 </div>
 
 
-                <!-- Single Speaker Area -->
+                <!-- SAKSHI PANDAGALE -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/4.jpg" alt="">
+                            <img src="img/our-team/sakshi.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -648,18 +648,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Albert Barnes</h5>
-                            <p>Founder</p>
+                            <h5>SAKSHI PANDAGALE</h5>
+                            <!-- <p>Founder</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- EKTA SINGH -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/4.jpg" alt="">
+                            <img src="img/our-team/ekta.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -670,19 +670,19 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Albert Barnes</h5>
-                            <p>Founder</p>
+                            <h5>EKTA SINGH</h5>
+                            <!-- <p>Founder</p> -->
                         </div>
                     </div>
                 </div>
 
                 
-                <!-- Single Speaker Area -->
+                <!-- DIVYANSH KUMAR -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/5.jpg" alt="">
+                            <img src="img/our-team/divyansh.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -693,18 +693,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Patricia Stanley</h5>
-                            <p>Product Lead</p>
+                            <h5>DIVYANSH KUMAR</h5>
+                            <!-- <p>Product Lead</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- SHIVAM SONI -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/6.jpg" alt="">
+                            <img src="img/our-team/shivam.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -715,18 +715,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Evelyn Stone</h5>
-                            <p>Photographer</p>
+                            <h5>SHIVAM SONI</h5>
+                            <!-- <p>Photographer</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- PARTH JHA -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/7.jpg" alt="">
+                            <img src="img/our-team/parth.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -737,18 +737,18 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Evelyn Stone</h5>
-                            <p>Photographer</p>
+                            <h5>PARTH JHA</h5>
+                            <!-- <p>Photographer</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- DEBRUPA NAG -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/bg-img/8.jpg" alt="">
+                            <img src="img/our-team/debrupa.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
@@ -759,13 +759,13 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Susan Hopkins</h5>
-                            <p>UX Manager</p>
+                            <h5>DEBRUPA NAG</h5>
+                            <!-- <p>UX Manager</p> -->
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Speaker Area -->
+                <!-- AJITH NAYAK -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
@@ -781,8 +781,8 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>Michael Fowler</h5>
-                            <p>Product Design</p>
+                            <h5>AJITH NAYAK</h5>
+                            <!-- <p>Product Design</p> -->
                         </div>
                     </div>
                 </div>
