update about workshop

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="about-content-text mb-80">
                         <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About workshop</h6> -->
                         <h3 class="wow fadeInUp" style="color: #df42b1;" data-wow-delay="300ms">About workshop</h3>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">AR/VR workshop is a two-day workshop designed for XR enthusiasts to make their weekend productive. The workshop will give participants an opportunity to meet, learn and discuss their ideas with like-minded cohorts and mentors. The two days of the workshop will be spent in getting a deeper understanding of the technology through various hands-on experiences. At the culmination of the workshop, each participant will be engraved with the skills required to enter the real world of XR.<br><br>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">AR/VR workshop is a two-day workshop designed for XR enthusiasts to make their weekend productive. Herein participants will get an opportunity to meet, learn and discuss their ideas with like-minded cohorts and mentors. During the workshop, participants will dive deep to get a better understanding of the technology through various hands-on experiences. At the culmination of the workshop, each participant will be engraved with the skills required to enter the real world of XR<br><br>
                             So, here's a chance to take the first step in an amazing journey on 4th and 5th April, 2020.</p>
                         <!--<a href="#schedule" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Schedule <i class="zmdi zmdi-long-arrow-right"></i></a>-->
                     </div>
@@ -202,10 +202,11 @@
         <div class="container">
             <div class="row align-items-center">
                 <!-- About Thumb -->
-                <div class="col-12 col-md-6" >
-                    <div data-wow-delay="300ms">
+                <div style="text-align: center;" class="col-12 col-md-6" >
+                    <div style="margin-bottom: 10px;" data-wow-delay="300ms">
                         <img src="img/bg-img/2copy_.png" height="450" width="450" alt="">
                     </div>
+                        <a style="color: #0e76a8;" href="https://www.linkedin.com/in/kartikkinge/"target="_blank"><i style="color: #0e76a8;" class="zmdi zmdi-linkedin"></i> linkedin</a>
                 </div>
 
                 <!-- About Content -->
@@ -213,7 +214,7 @@
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About The Speaker</h6>
                         <h3 class="wow fadeInUp"style="color:#35547b;" data-wow-delay="300ms">Hi I'm Kartik</h3>
-                        <p class="wow fadeInUp" style="color:#35547b;" data-wow-delay="300ms">I am an AR/VR Evangelist and have been working with immersive technologies for the past 3 years. I am an engineer by profession, explorer by mind and an art lover from heart. I am founder of ARVidhya, an Augmented Reality EdTech startup working for making children's education more engaging and fun. I am winner at Startup Weekend organized by Google for Entrepreneurs held at Microsoft Hyderabad. I'm also a proud winner of International IEEE Maker Fair, wherein I competed with international participants from 18 countries. Lately I attended the world's largest AR VR Hackathon held at Massachusetts Institute of Technology, USA.
+                        <p class="wow fadeInUp" style="color:#35547b;" data-wow-delay="300ms">I am an AR/VR Evangelist and have been working with immersive technologies for the past 3 years. I am a budding engineer from Electronics and Communication department IIIT Nagpur, explorer by mind and an art lover from heart. I am founder of ARVidhya, an Augmented Reality EdTech startup working for making children's education more engaging and fun. I am winner at Startup Weekend organized by Google for Entrepreneurs held at Microsoft Hyderabad. I'm also a proud winner of International IEEE Maker Fair, wherein I competed with international participants from 18 countries. Lately, I attended the world's largest AR VR Hackathon held at Massachusetts Institute of Technology, USA.
                            <br><br> I will be guiding you to learn and understand immersive technologies in detail. In the workshop, we will walk through the development workflow by building different AR applications. I am very excited to see you all in the event. </p>
 
                     </div>
@@ -248,7 +249,7 @@
 
     <!-- About Us And Countdown Area End -->
 
-    <section class="about-us-countdown-area section-padding-100-0" style="background-color:#87a9fd;" id="speaker">
+    <section class="about-us-countdown-area section-padding-100-0" style="background-color:#d3dffe;" id="speaker">
        
 
         <div class="container">
@@ -465,11 +466,11 @@
                                     </div>
 
                                     <!-- More Schedule Btn -->
-                                    <div class="col-12">
+                                    <!-- <div class="col-12">
                                         <div class="more-schedule-btn text-center mt-50 wow fadeInUp" data-wow-delay="300ms">
                                             <a href="#" class="btn confer-gb-btn">Dowload schedule (Pdf)</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -659,11 +660,11 @@
                                     </div>
 
                                     <!-- More Schedule Btn -->
-                                    <div class="col-12">
+                                    <!-- <div class="col-12">
                                         <div class="more-schedule-btn text-center mt-50 wow fadeInUp" data-wow-delay="300ms">
                                             <a href="#" class="btn confer-gb-btn">Dowload schedule (Pdf)</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -707,7 +708,7 @@
                         <div class="speaker-info">
                             <h5>DR. O. G. Kakde</h5>
                             <p style="color: #ffffff; padding-bottom: 10px;">DIRECTOR, IIIT Nagpur</p>
-                            <a href="http://cse.vnit.ac.in/people/ogkakde"><p>Read more</p></a>
+                            <a target="_blank" href="http://cse.vnit.ac.in/people/ogkakde"><p>Read more</p></a>
                         </div>
                     </div>
                 </div>
@@ -730,7 +731,7 @@
                         <div class="speaker-info">
                             <h5>DR. ASHWIN KOTHARI</h5>
                             <p style="padding-bottom: 10px; color: #ffffff;">DEAN, IIIT Nagpur</p>
-                            <a href="http://ece.vnit.ac.in/people/ashwinkothari/"><p>Read more</p></a>
+                            <a target="_blank" href="http://ece.vnit.ac.in/people/ashwinkothari/"><p>Read more</p></a>
                         </div>
                     </div>
                 </div>
@@ -754,9 +755,9 @@
                         </div> -->
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>DR. ANKIT BHURANI</h5>
+                            <h5>DR. ANKIT BHURANE</h5>
                             <p style="padding-bottom: 10px; color: #ffffff;">Faculty Coordinator & HOD ECE</p>
-                            <a href="https://iiitn.ac.in/faculty-ece-aab.php"><p>Read more</p></a>
+                            <a target="_blank" href="https://iiitn.ac.in/faculty-ece-aab.php"><p>Read more</p></a>
                         </div>
                     </div>
                 </div>
