--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         </div>
     </header>
     <!-- Header Area End -->
+
+
     <!-- Welcome Area Start -->
     <section class="welcome-area" id="home">
         <div class="welcome-slides owl-carousel">
@@ -257,8 +259,8 @@
                 <!-- About Thumb -->
                 <div class="col-12 col-md-3" >
                     <div data-wow-delay="300ms">
-                        <img src="img/core-img/iiitnlogo.png" height="450" width="450" alt="">
-                        <div style="text-align: center; padding: 20px;"><a href="https://iiitn.ac.in/">Visit website</a></div>
+                        <img style="padding: 20px;" src="img/core-img/iiitnlogo.png" height="450" width="450" alt="">
+                        <div style="text-align: center;"><a href="https://iiitn.ac.in/">Visit website</a></div>
                     </div>
                 </div>
 
@@ -782,21 +784,22 @@
             <div class="row">
                 <!-- ADITYA SHER -->
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"  data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
                             <img src="img/our-team/aditya.jpg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://www.instagram.com/aditya_sher/" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="https://www.instagram.com/aditya_sher/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://twitter.com/adityashertg" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/adityasher" target="_blank"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/adityasher" target="_blank"><i class="zmdi zmdi-github"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>ADITYA SHER</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">ADITYA SHER</h5>
                             <!-- <p>Founder</p> -->
                         </div>
                     </div>
@@ -811,14 +814,15 @@
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://www.facebook.com/people/Sourav-Singh/100006463442195" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="https://www.instagram.com/_singh_sourav_/?hl=en" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/sourav-singh-8a774a193/" target="_blank"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/srvsingh1962" target="_blank"><i class="zmdi zmdi-github"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>SOURAV SINGH</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">SOURAV SINGH</h5>
                             <!-- <p>Founder</p> -->
                         </div>
                     </div>
@@ -842,7 +846,7 @@
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>SAKSHI PANDAGALE</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">SAKSHI PANDAGALE</h5>
                             <!-- <p>Founder</p> -->
                         </div>
                     </div>
@@ -859,13 +863,14 @@
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://www.instagram.com/ektasingh1221/?r=nametag" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
                             <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/ekta20" target="_blank"><i class="zmdi zmdi-github"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>EKTA SINGH</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">EKTA SINGH</h5>
                             <!-- <p>Founder</p> -->
                         </div>
                     </div>
@@ -881,14 +886,15 @@
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://www.facebook.com/divyansh.kumar.3720" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="https://www.instagram.com/drock_2001_?r=nametag" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://twitter.com/DIVYANS46603142?s=09" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/divyansh-kumar-9a5856192" target="_blank"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/Drock2001" target="_blank"><i class="zmdi zmdi-github"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>DIVYANSH KUMAR</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">DIVYANSH KUMAR</h5>
                             <!-- <p>Product Lead</p> -->
                         </div>
                     </div>
@@ -904,14 +910,15 @@
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100015378044539&ref=bookmarks" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
+                            <a href="https://www.instagram.com/educational__guru/?hl=en" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://twitter.com/shivams62018548" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/shivam-soni-s/" target="_blank"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/Shivamsoni1737" target="_blank"><i class="zmdi zmdi-github"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>SHIVAM SONI</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">SHIVAM SONI</h5>
                             <!-- <p>Photographer</p> -->
                         </div>
                     </div>
@@ -927,13 +934,13 @@
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                            <a href="https://www.instagram.com/_dark_phoenix_07/?r=nametag" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
                             <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>PARTH JHA</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">PARTH JHA</h5>
                             <!-- <p>Photographer</p> -->
                         </div>
                     </div>
@@ -944,44 +951,44 @@
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
                         <div class="speaker-single-thumb">
-                            <img src="img/our-team/debrupa.jpg" alt="">
+                            <img src="img/our-team/debrupa.jpeg" alt="">
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="#"><i class="zmdi zmdi-facebook"></i></a>
                             <a href="#"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/debrupa-nag-820815190" target="_blank"><i class="zmdi zmdi-linkedin"></i></a>
                         </div>
                         <!-- Info -->
                         <div class="speaker-info">
-                            <h5>DEBRUPA NAG</h5>
+                            <h5 style="border-bottom: 2px solid #ffffff;">DEBRUPA NAG</h5>
                             <!-- <p>UX Manager</p> -->
                         </div>
                     </div>
                 </div>
 
                 <!-- AJITH NAYAK -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                <!-- <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms"> -->
                         <!-- Thumb -->
-                        <div class="speaker-single-thumb">
+                        <!-- <div class="speaker-single-thumb">
                             <img src="img/bg-img/9.jpg" alt="">
-                        </div>
+                        </div> -->
                         <!-- Social Info -->
-                        <div class="social-info">
+                        <!-- <div class="social-info">
                             <a href="#"><i class="zmdi zmdi-facebook"></i></a>
                             <a href="#"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
                             <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div>
+                        </div> -->
                         <!-- Info -->
-                        <div class="speaker-info">
-                            <h5>AJITH NAYAK</h5>
+                        <!-- <div class="speaker-info">
+                            <h5>AJITH NAYAK</h5> -->
                             <!-- <p>Product Design</p> -->
-                        </div>
+                        <!-- </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="col-12">
                     <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms">
