--- a/index.html
+++ b/index.html
@@ -978,26 +978,26 @@
                 </div>
 
                 <!-- AJITH NAYAK -->
-                <!-- <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms"> -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <!-- Thumb -->
-                        <!-- <div class="speaker-single-thumb">
-                            <img src="img/bg-img/9.jpg" alt="">
-                        </div> -->
+                        <div class="speaker-single-thumb">
+                            <img src="img/our-team/ajith.jpg" alt="">
+                        </div>
                         <!-- Social Info -->
-                        <!-- <div class="social-info">
+                        <div class="social-info">
                             <a href="#"><i class="zmdi zmdi-facebook"></i></a>
                             <a href="#"><i class="zmdi zmdi-instagram"></i></a>
                             <a href="#"><i class="zmdi zmdi-twitter"></i></a>
                             <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div> -->
+                        </div>
                         <!-- Info -->
-                        <!-- <div class="speaker-info">
-                            <h5>AJITH NAYAK</h5> -->
+                        <div class="speaker-info">
+                            <h5>AJITH NAYAK</h5>
                             <!-- <p>Product Design</p> -->
-                        <!-- </div>
+                        </div>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- <div class="col-12">
                     <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms">
